--- a/public/style.css
+++ b/public/style.css
@@ -1,42 +1,644 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Lugrasimo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@500&family=Ysabeau:ital,wght@0,1..1000;1,1..1000&display=swap');
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
+    cursor: url('https://img.icons8.com/?size=30&id=TVppPfbzSk3y&format=png&color=ff6666'), default;
+}
+*::selection {
+    color: white;
+    background-color: #FF3C0A;
+    cursor: url('sources/navigation.png'), auto;
 }
 
-.navbar {
+
+#navbar{
+    position: sticky;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    margin-top: 1vh;
+    border-radius: 5vw;
     display: flex;
-    background-color: rgba(0, 0, 0, 1.05);
-    height: 75px;
-    width: 100vw;
-    align-items: center;
+    height: 10vh;
     justify-content: space-between;
+    background-color: whitesmoke;
+    align-items: center;
+    width: 90vw;
+    left: 5vw;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1), 0 7px 14px rgba(0, 0, 0, 0.08);
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+#navbar:hover {
+    box-shadow: 0 11px 22px rgba(255, 60, 10, 0.3); 
+    transform: scale(1.01); 
+    border-color: rgba(255, 60, 10, 0.8); 
+
+}
+
+.logo {
+    margin-left: 3vw;
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: #FF3C0A;
+    font-family: "Space Grotesk";
+    text-transform: uppercase;
+}
+.nav-btn ul {
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    margin-right: 5vw;
+}
+.nav-btn ul li a {
+    text-decoration: none;
+    color: #ff3c0a;
+    text-transform: capitalize;
+    border: 1px solid rgba(255, 60, 10, 1);
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    font-family: "Space Grotesk";
+    
+}
+.nav-btn a::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FF3C0A;
+    z-index: -1;
+    transform: scaleX(0) scaleY(0);
+    transform-origin: center;
+    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 50px;
+}
+.nav-btn li:hover {
+    transform: scale(1.04);
+}
+
+.nav-btn a:hover {
+    color: white;
+    transform: scale(1.04);
+    background-color: #FF3C0A;
+    transition: color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-btn a.hover-from-top::before {
+    transform-origin: top;
+    transform: scaleY(1);
+}
+
+.nav-btn a.hover-from-bottom::before {
+    transform-origin: bottom;
+    transform: scaleY(1);
+}
+
+.nav-btn a.hover-from-left::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+.nav-btn a.hover-from-right::before {
+    transform-origin: right;
+    transform: scaleX(1);
+}
+
+
+#page1 {
+    height: 85vh;
+    position: relative;
+    padding-top: 16vh;
+    display: flex;
+}
+
+
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    max-width: 60vw;
+}
+
+#page1 h1 {
+    font-family: futura;
+    font-size: 10vw;
+    text-transform: uppercase;
+    line-height: 8vw;
+    letter-spacing: -3px;
+}
+.red-color {
+    color: transparent;
+    -webkit-text-stroke: 2px #FF3C0A;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.stroke {
+    color: #FF3C0A;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+#page1 p {
+    font-size: 1.3vw;
+    font-family: Space Grotesk,sans-serif;
+    font-weight: 200;
+    padding: 5vh 2vw;
+    color: #FF3C0A;
+    letter-spacing: -1px;
+}
+
+.hero-button {
+    position: relative;
+    height: 20px;
+    margin-left: 20vw;
+    width: 8vw;
+    align-items: center;
+    text-align: center;
+    display: inline-block;
+    padding: 20px   15px;
+    font-size: 1vw;
+    font-weight: bold;
+    color: #FF3C0A;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 2px solid #FF3C0A;
+    border-radius: 50px;
+    overflow: hidden;
+    transition: color 0.1s ease;
+    background-color: transparent;
+    font-family: "Space Grotesk";
+}
+
+.hero-button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FF3C0A;
+    z-index: -1;
+    transform: scaleX(0) scaleY(0);
+    transform-origin: center;
+    transition: transform 0.2s ease-in-out;
+    border-radius: 50px;
+}
+
+.hero-button:hover {
     color: white;
 }
-.logo {
-    position: relative;
-    padding: 30px;
-    font-size: 20px;
-    /* left: 40px; */
-    font-family: "Fira Code", serif;
-    font-optical-sizing: auto;
-    font-weight: 400px;
-    font-style: italic;
-    padding-left: 100px;
-    border-bottom: 2px solid purple;
+
+.hero-button.hover-from-top::before {
+    transform-origin: top;
+    transform: scaleY(1);
 }
-.icons {
+
+.hero-button.hover-from-bottom::before {
+    transform-origin: bottom;
+    transform: scaleY(1);
+}
+
+.hero-button.hover-from-left::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+.hero-button.hover-from-right::before {
+    transform-origin: right;
+    transform: scaleX(1);
+}
+
+#about{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+.headers {
+    display: flex;
+    gap: 1vw;
+    margin-left: 2vw;
+    opacity: 1;
+    transform: translateX(20px);
+}
+
+.h1 {
+    color: transparent;
+    font-size: 8vh;
+    -webkit-text-stroke: 2px #FF3C0A;
+    text-transform: uppercase;
+    font-family: futura;
+    font-weight: bold;
+}
+.h2 {
+    font-size: 8vh;
+    color: #FF3C0A;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: futura;
+}
+.about-content {
+    display: flex;
+}
+.about-content p {
+    max-width: 60vw;
+    padding-left: 2vw;
+    padding-top: 10vh;
+    line-height: 1.5vw;
+    word-spacing: 0.35rem;
+    font-size: 1.21vw;
+    font-family: "Space Grotesk";
+}
+.about-content p span {
+    color: #FF3C0A;
+    text-transform: uppercase;
+    font-family: futura;
+    background-size: cover;
+    background-position: center;
+}
+.image {
+    background-color: #FF3C0A;
+    color: #FF3C0A;
+    height: 450px;
+    width: 30vw;
+    margin-left: 5vw;
+    border-radius: 50%;
+    margin-top: 2vh;
+    background-image: url(fda2e9552c5c6c927987797342961fb4.jpg);
+}
+
+/* #page2{
+    height: 95vh;
+    width: 97vw;
+    display: flex;
+    position: relative;
+    margin-left: 1.5vw;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 8vh;
+}
+
+.elem {
+    height: 100%;
+    width: 30%;
+    border-radius: 2vw;
+    background-color: #FF3C0A;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+    overflow: visible;
+}
+
+.elem-heading {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 1rem;
+    transform: translateX(-0.9rem);
+}
+
+#page2 .elem h1 {
+    color: white;
+    font-family: futura;
+    font-style: 4rem;
+    text-align: center;
+    width: 100%;
+    text-transform: uppercase;
+    left: 4vw;
+}
+
+#page2 .elem h4 {
+    color: white;
+    font-family: futura;
+    font-size: 1.2rem;
+    position: relative;
+    left: 1vw;
+    top: 1vh;
+}
+#page2 .elem svg {
+    height: auto;
+    width: 100;
+    
+}
+
+.container {
     position: relative;
     display: flex;
-    justify-content: space-between;
-    padding-right: 180px;
+    justify-content: center;
+    bottom: 35vh;
 }
-.icons div{
-    padding: 20px;
-    font-size: 18px;
-    font-family: "Ysabeau SC", serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
+
+.dropdown {
+    background-color: rgb(255, 255, 255);
+    color: #1a1a1a;
+    width: fit-content;
+    border-radius: 50px;
+    position: relative;
+    margin-bottom: 0;
+    transition: border-radius 0.3s ease; 
+    border: 1px solid black;
+    font-family: "Space Grotesk";
+}
+
+.dropdown-content {
+    display: flex;
+    gap: 2rem;
+    margin: 1vw;
+    padding: 0.1rem;
+    padding-right: 1.4rem;
+    font-size: 12px;
+    text-decoration: none;
+} */
+/* 
+#circle-icon {
+    font-weight: 900;
+    font-size: 8px;
+    display: flex;
+    align-items: center;
+}
+
+#text {
+    font-weight: 900;
+    color: #ff3c0a;
+    font-size: 1.5vw;
+}
+
+#desc {
+    font-weight: 900;
+    font-size: 1.5vw;
+    color: #FF3C0A;
+}
+
+.dropdown-images {
+    color: #FF3C0A;
+    position: absolute;
+    top: 60%; 
+    left: 0;
+    width: 100%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: 0 0 20px 20px; 
+    transform-origin: top center;
+    transform: scaleY(0);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    box-sizing: border-box;
+    z-index: -1;
+}
+
+.dropdown-images h4 {
+    color: #FF3C0A;
+    width: 100px;
+    margin-top: 20px;
+    height: auto;
+    border-radius: 5px;
+}
+
+.dropdown:hover .dropdown-images {
+    transform: scaleY(1);
+    opacity: 1;
+    color: #FF3C0A;
+} */
+#card-container {
+    height: 75vh;
+    background-color: whitesmoke;
+    margin-top: 10vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.card {
+    height: 90%;
+    width: 30%;
+    background-color: white;
+    border-radius: 14%;
+    display: flex;
+    flex-direction: column;
+    z-index: 10;
+    border: 2px solid white;
+    transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.overlay {
+    position: absolute;
+    height: 67.5vh;
+    width: 30vw;
+    background-color: white;
+    border-radius: 14%;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+    border: 2px solid #FF3C0A;
+}
+.overlay h1 {
+    color: #FF3C0A;
+    padding-top: 12vh;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-bottom: 6vh;
+    font-size: 8vh;
+    font-family: futura;
+}
+.overlay h4 {
+    color: #f66;
+    padding-top: 2vh;
+    font-size: 3vh;
+    font-family: "Space Grotesk";
+}
+.overlay:hover {
+    opacity: 1;
+}
+.card:hover{
+    transform: scale(1.01);
+}
+
+.elem-heading {
+    font-size: 1.2rem;
+    padding-top: 8vh;
+    padding-left: 1vw;
+    color: #ff3c0a;
+    text-transform: capitalize;
+    font-family: "Space Grotesk";
+    text-align: center;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+
+.hover-content {
+    margin-top: 15px;
+    display: none; 
+    animation: fadeIn 0.5s ease;
+}
+
+.revealer:hover .hover-content {
+    display: block; 
+}
+
+.hover-content .item {
+    margin: 10px 0;
+}
+
+.hover-content .item h4 {
+    font-size: 12px;
+    margin: 0;
+    color: #ff3c0a;
+}
+#page3 {
+    display: flex;
+    margin-top: 10vh;
+    height: 70vh;
+}
+.con-con {
+    max-width: 70vw;
+    margin-left: 3vw;
+    font-family: "Space Grotesk";
+}
+.socials svg {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    display: flex;
+}
+.social {
+    display: flex;
+    margin-left: 5vw;
+    gap: 2vw;
+    margin-top: 3vh;
+    text-align: center;
+    align-items: center;
+    opacity: 0.8;
+}
+.social:hover {
+    transform: scale(1.1);
+    transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    opacity: 1;
+}
+
+.social h2 {
+    color: #FF3C0A;
+    font-family: "Space Grotesk";
+}
+.sopcial svg:hover {
+    fill: #FF3C0A;
+}
+
+footer {
+    height: 10vh;
+    font-family: "Space Grotesk";
+    background-color: #FF3C0A;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Animations*/
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+.reveal {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.reveal.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* Responsiveness */
+
+
+@media (max-width: 600px) {
+    #page1 {
+        flex-direction: column;
+    }
+    #page1 h1 {
+        margin-left: 3vw;
+        font-size: 16vw;
+        text-transform: uppercase;
+        line-height: 8vw;
+        letter-spacing: -1px;
+    }
+    #page1 p {
+        margin-left: 1vw;
+        font-size: 3vw;
+        letter-spacing: 0.05vw;
+    }
+    .hero-button {
+    position: relative;
+    height: 25px;
+    margin-left: 30vw;
+    width: 15vw;
+    align-items: center;
+    text-align: center;
+    display: inline-block;
+    padding: 20px 20px;
+    font-size: 3.4vw;
+    }
+    .image {
+        height: 300px;
+        width: 80vw;
+        margin-left: 10vw;
+        border-radius: 50%;
+        margin-top: 2vh;
+    }
+    #page2{
+        height: 80vh;
+        width: 97vw;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        margin-left: 1.5vw;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    #page2 .elem {
+        height: 100%;
+        width: 95vw;
+        border-radius: 2vw;
+        background-color: #FF3C0A;
+        margin-top: 1vh;
+    }
+    #page2 .elem h1 {
+        color: white;
+        font-family: futura;
+        font-style: 0.8vw;
+        text-transform: uppercase;
+        position: relative;
+        left: 4vw;
+    }
+    
+    #page2 .elem h4 {
+        color: white;
+        font-family: futura;
+        font-size: 1.2rem;
+        position: relative;
+        left: 1vw;
+        top: 1vh;
+    }
+    #page2 .elem svg {
+        position: relative;
+        left: 35%;
+    }
 }
